[package]
name = "test-temp-file"
version = "0.1.2"
authors = ["ohaddahan <ohaddahan@gmail.com>"]
edition = "2018"
repository = "https://github.com/ohaddahan/test-temp-file"
license = "MIT OR Apache-2.0"
keywords = ["test", "tests", "testing", "temp", "tmp"]
categories = ["development-tools::testing", "filesystem"]
description = "This crate allows creation and automatic deletion (based on Drop trait) of files"
include = ["src/", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
